Добавил футер сайта

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         </section>
     </main>
 
+    <footer>
+        some text
+    </footer>
 
-
-    <div style="height: 500px;"></div>
 </body>
 </html>
