рефакторинг кода в хтмл и удаление лишних комментариев

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             </div>
             <!-- /.container -->
         </section>
+        <section>
+            <div class="container">
+                Следующая секция
+            </div>
+        </section>
     </main>
 
     <footer>
